// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DualListSelector basic 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="firstTest"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="firstTest-available-pane-status"
        >
          0 of 2 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="firstTest-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="firstTest-available-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 1
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="firstTest-available-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 2
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r6:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r7:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r8:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="firstTest-chosen-pane-status"
        >
          0 of 0 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          class="pf-v6-c-dual-list-selector__list"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector basic with disabled controls 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="disabledTest"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="disabledTest-available-pane-status"
        >
          0 of 2 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-disabled="true"
          aria-labelledby="disabledTest-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item pf-m-disabled"
            id="disabledTest-available-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 1
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item pf-m-disabled"
            id="disabledTest-available-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 2
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r16:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r17:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r18:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r19:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="disabledTest-chosen-pane-status"
        >
          0 of 0 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-disabled="true"
          class="pf-v6-c-dual-list-selector__list"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with actions 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="fourthTest"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__tools"
      >
        <div
          class="pf-v6-c-dual-list-selector__tools-actions"
        >
          <span>
            TestNode1
          </span>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="fourthTest-available-pane-status"
        >
          0 of 2 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="fourthTest-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="fourthTest-available-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 1
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="fourthTest-available-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 2
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1q:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1r:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1s:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1t:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__tools"
      >
        <div
          class="pf-v6-c-dual-list-selector__tools-actions"
        >
          <span>
            TestNode2
          </span>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="fourthTest-chosen-pane-status"
        >
          0 of 2 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="fourthTest-chosen-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="fourthTest-chosen-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 3
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="fourthTest-chosen-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 4
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with custom status 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="thirdTest"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="thirdTest-available-pane-status"
        >
          Test status1
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="thirdTest-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="thirdTest-available-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 1
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="thirdTest-available-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 2
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rr:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rs:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rt:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:ru:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="thirdTest-chosen-pane-status"
        >
          Test status2
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          class="pf-v6-c-dual-list-selector__list"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with search inputs 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="secondTest"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__tools"
      >
        <div
          class="pf-v6-c-dual-list-selector__tools-filter"
        >
          <div
            class="pf-v6-c-text-input-group"
          >
            <div
              class="pf-v6-c-text-input-group__main pf-m-icon"
            >
              <span
                class="pf-v6-c-text-input-group__text"
              >
                <span
                  class="pf-v6-c-text-input-group__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0  "
                    width="1em"
                  >
                    <path />
                  </svg>
                </span>
                <input
                  aria-label="Available search input"
                  class="pf-v6-c-text-input-group__text-input"
                  type="text"
                  value=""
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="secondTest-available-pane-status"
        >
          0 of 2 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="secondTest-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="secondTest-available-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 1
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="secondTest-available-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 2
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rg:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rh:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:ri:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rj:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__tools"
      >
        <div
          class="pf-v6-c-dual-list-selector__tools-filter"
        >
          <div
            class="pf-v6-c-text-input-group"
          >
            <div
              class="pf-v6-c-text-input-group__main pf-m-icon"
            >
              <span
                class="pf-v6-c-text-input-group__text"
              >
                <span
                  class="pf-v6-c-text-input-group__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0  "
                    width="1em"
                  >
                    <path />
                  </svg>
                </span>
                <input
                  aria-label="Chosen search input"
                  class="pf-v6-c-text-input-group__text-input"
                  type="text"
                  value=""
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="secondTest-chosen-pane-status"
        >
          0 of 0 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          class="pf-v6-c-dual-list-selector__list"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with tree 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="tree-test"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="tree-test-available-pane-status"
        >
          Test status1
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="tree-test-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="tree"
        >
          <li
            aria-expanded="true"
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item pf-m-expandable pf-m-expanded"
            id="O1"
            role="treeitem"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row pf-m-check"
            >
              <div
                class="pf-v6-c-dual-list-selector__item"
                tabindex="-1"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <div
                    class="pf-v6-c-dual-list-selector__item-toggle"
                    tabindex="-1"
                  >
                    <span
                      class="pf-v6-c-dual-list-selector__item-toggle-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0  "
                        width="1em"
                      >
                        <path />
                      </svg>
                    </span>
                  </div>
                  <span
                    class="pf-v6-c-dual-list-selector__item-check"
                  >
                    <input
                      tabindex="-1"
                      type="checkbox"
                    />
                  </span>
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Opt1
                  </span>
                </span>
              </div>
            </div>
            <ul
              class="pf-v6-c-dual-list-selector__list"
              role="group"
            >
              <li
                aria-selected="false"
                class="pf-v6-c-dual-list-selector__list-item"
                id="O3"
                role="treeitem"
              >
                <div
                  class="pf-v6-c-dual-list-selector__list-item-row pf-m-check"
                >
                  <div
                    class="pf-v6-c-dual-list-selector__item"
                    tabindex="-1"
                  >
                    <span
                      class="pf-v6-c-dual-list-selector__item-main"
                    >
                      <span
                        class="pf-v6-c-dual-list-selector__item-check"
                      >
                        <input
                          tabindex="-1"
                          type="checkbox"
                        />
                      </span>
                      <span
                        class="pf-v6-c-dual-list-selector__item-text"
                      >
                        Opt3
                      </span>
                    </span>
                  </div>
                </div>
              </li>
            </ul>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="O2"
            role="treeitem"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row pf-m-check"
            >
              <div
                class="pf-v6-c-dual-list-selector__item"
                tabindex="-1"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-check"
                  >
                    <input
                      tabindex="-1"
                      type="checkbox"
                    />
                  </span>
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Opt2
                  </span>
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1f:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1g:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1h:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1i:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="tree-test-chosen-pane-status"
        >
          Test status2
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          class="pf-v6-c-dual-list-selector__list"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
